src/FinancialForce Accounting/objects/codaCashEntry__c.object
<CustomObject>
    <customHelpPage>codahelpcashentry</customHelpPage>
    <description>Stores the master details of cash and checks received from, or refunds given to, customer.</description>
    <fields>
        <fullName>AccountAllocated__c</fullName>
        <formula>AccountTotal__c - AccountUnallocated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountCurrency__c</fullName>
        <formula>Account__r.CODAAccountTradingCurrency__c</formula>
        <label>Account Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Cash Entries (Account Dimension 1)</relationshipLabel>
        <relationshipName>CashEntriesAcDim1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Cash Entries (Account Dimension 2)</relationshipLabel>
        <relationshipName>CashEntriesAcDim2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Cash Entries (Account Dimension 3)</relationshipLabel>
        <relationshipName>CashEntriesAcDim3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountTotal__c</fullName>
        <formula>IF(ISPICKVAL(Type__c,&apos;Payment&apos;) || ISPICKVAL(Type__c,&apos;Payment Refund&apos;),-1 * Transaction__r.AccountTotal__c, Transaction__r.AccountTotal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountUnallocated__c</fullName>
        <formula>IF(ISPICKVAL(Type__c,&apos;Payment&apos;) || ISPICKVAL(Type__c,&apos;Payment Refund&apos;),-1 * Transaction__r.AccountOutstandingTotal__c, Transaction__r.AccountOutstandingTotal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Unallocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankAccountCurrency__c</fullName>
        <formula>BankAccount__r.BankAccountCurrency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Account Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankAccountDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Cash Entries (Bank Account Dimension 1)</relationshipLabel>
        <relationshipName>CashEntriesBnkAcDim1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankAccountDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Cash Entries (Bank Account Dimension 2)</relationshipLabel>
        <relationshipName>CashEntriesBnkAcDim2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankAccountDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Cash Entries (Bank Account Dimension 3)</relationshipLabel>
        <relationshipName>CashEntriesBnkAcDim3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BankAccountValue__c</fullName>
        <label>Bank Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>codaBankAccount__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CancelingCashEntry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Canceling Cash Entry Number</label>
        <referenceTo>codaCashEntry__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CancelingCashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CashEntryCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Entry Currency</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CashEntryRate__c</fullName>
        <label>Cash Entry Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargesAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Bank Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargesGLADimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Cash Entries (Dimension 1)</relationshipLabel>
        <relationshipName>Cash_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargesGLADimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Cash Entries (Dimension 2)</relationshipLabel>
        <relationshipName>Cash_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargesGLADimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Cash Entries (Dimension 3)</relationshipLabel>
        <relationshipName>Cash_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargesGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Charges GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>Cash_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargesLocalGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to GLA</description>
        <label>Bank Charges Local GLA</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a local GLA and must be active.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Cash Entries (Bank Charges Local GLA)</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CompanyReference__c</fullName>
        <description>Company Reference</description>
        <formula>OwnerCompany__r.Name</formula>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Cash entry currency.</description>
        <formula>CashEntryCurrency__r.Name</formula>
        <label>Payment Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The date on the cheque, etc.</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>An optional description of the item</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DiscardReason__c</fullName>
        <description>The reason the item was discarded (canceled)</description>
        <label>Discard Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DualRate__c</fullName>
        <label>Dual Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FromIntercompanyTransfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Intercompany Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LineCharges__c</fullName>
        <label>Line Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetBanked__c</fullName>
        <formula>BankAccountValue__c  -  TotalCharges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Banked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NetValue__c</fullName>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OriginalCashEntry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Cash Entry Number</label>
        <referenceTo>codaCashEntry__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>OriginalCashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <description>The type of payment</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Number</label>
        <referenceTo>codaPayment__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentStatus__c</fullName>
        <formula>if( NOT( ISPICKVAL( Status__c, &apos;Complete&apos; ) ),
&apos;Not Applicable&apos;,
if( Transaction__r.DocumentOutstandingTotal__c == 0,&apos;Paid&apos;,
if( Transaction__r.DocumentTotal__c == Transaction__r.DocumentOutstandingTotal__c, &apos;Unpaid&apos;,
&apos;Part Paid&apos; ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentTotal__c</fullName>
        <description>Document total generated in the transaction.</description>
        <formula>IF(ISPICKVAL(Type__c,&apos;Payment&apos;) || ISPICKVAL(Type__c,&apos;Payment Refund&apos;),-1 * Transaction__r.DocumentTotal__c, Transaction__r.DocumentTotal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentType__c</fullName>
        <description>Convert type for final community users.</description>
        <formula>IF( ISPICKVAL(Type__c, &apos;Receipt&apos;), $Label.c2g__communitiescashentrytypepayment, IF( ISPICKVAL(Type__c, &apos;Payment&apos;), $Label.c2g__communitiescashentrytypepaid, IF( ISPICKVAL(Type__c, &apos;Payment Refund&apos;), $Label.c2g__communitiescashentrytyperefunded, $Label.c2g__communitiescashentrytyperefund)))</formula>
        <label>Payment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>codaPeriod__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <description>Any reference number from the registered item, such as giro #</description>
        <label>Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SignedBankCharge__c</fullName>
        <formula>IF( text(Type__c) = &quot;Refund&quot;, ChargesAmount__c *-1, ChargesAmount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed Bank Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SignedNetBanked__c</fullName>
        <formula>IF( text(Type__c) = &quot;Refund&quot;, NetBanked__c *-1, NetBanked__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed Net Banked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the item</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalAllocated__c</fullName>
        <description>The total value minus the outstanding value generated in the transaction.</description>
        <formula>PaymentTotal__c - TotalUnallocated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalCharges__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalUnallocated__c</fullName>
        <description>The outstanding value generated in the transaction.</description>
        <formula>IF(ISPICKVAL(Type__c,&apos;Payment&apos;) || ISPICKVAL(Type__c,&apos;Payment Refund&apos;),-1 * Transaction__r.DocumentOutstandingTotal__c, Transaction__r.DocumentOutstandingTotal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Unallocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>codaTransaction__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The direction of payment</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Receipt</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Payment Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount in home currency</description>
        <label>Cash Entry Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>Period__r.YearName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Cash Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Date__c</columns>
        <columns>Period__c</columns>
        <columns>BankAccount__c</columns>
        <columns>Status__c</columns>
        <columns>NetBanked__c</columns>
        <columns>Reference__c</columns>
        <columns>PaymentNumber__c</columns>
        <columns>Account__c</columns>
        <columns>BankAccountCurrency__c</columns>
        <columns>OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CSH{000000}</displayFormat>
        <label>Cash Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>